--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
     </section>
 
     <div class="footer">
+        <p id="footP"><a target="_blank" href="https://www.fiverr.com/georgeberaia/create-sites-from-your-figma-xd-photoshop-design ">Fiverr</a></p>
         <div class="flex cMail">
             <img src="./images/mail2.png" alt="email" id="mail"> 
             <p>giorgi.beraia37@gmail.com</p>
