--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Giogi Beraia's Portfolio</title>
+    <title>Great Development</title>
     <!-- css style -->
     <link rel="stylesheet" href="./styles/style.css">
     <!-- js script -->
@@ -48,7 +48,7 @@
     </section>
 
     <div class="footer">
-        <p id="footP"><a target="_blank" href="https://www.fiverr.com/georgeberaia/create-sites-from-your-figma-xd-photoshop-design ">Fiverr</a></p>
+        <p id="footP"><a target="_blank" href="https://www.facebook.com/profile.php?id=100087268394740">Facebook</a></p>
         <div class="flex cMail">
             <img src="./images/mail2.png" alt="email" id="mail"> 
             <p>giorgi.beraia37@gmail.com</p>
