--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <p id="footP"><a target="_blank" href="https://www.facebook.com/profile.php?id=100087268394740">Facebook</a></p>
         <div class="flex cMail">
             <img src="./images/mail2.png" alt="email" id="mail"> 
-            <p>giorgi.beraia37@gmail.com</p>
+            <p>greatdevelopmentpost@gmail.com</p>
         </div>
         <h2 id="lastH">Designed and developed by Giorgi Beraia</h2>
     </div>
